# mirofish-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
crates/mirofish-api/: Cargo.toml
crates/mirofish-api/src/: graph.rs  lib.rs  project.rs  report.rs  report_store.rs  router.rs  simulation.rs  state.rs  upload.rs
crates/mirofish-core/: Cargo.toml
crates/mirofish-core/src/: config.rs  error.rs  lib.rs  ontology.rs  project.rs  report.rs  simulation.rs  task.rs
crates/mirofish-graph/: Cargo.toml
crates/mirofish-graph/src/: builder.rs  client.rs  entity_reader.rs  lib.rs  ontology.rs  search.rs
crates/mirofish-llm/: Cargo.toml
crates/mirofish-llm/src/: client.rs  lib.rs  parsing.rs  prompts.rs
crates/mirofish-report/: Cargo.toml
crates/mirofish-report/src/: agent.rs  chat.rs  lib.rs  planner.rs  react.rs  tools.rs
crates/mirofish-server/: Cargo.toml
crates/mirofish-server/src/: main.rs
crates/mirofish-sim/: Cargo.toml
crates/mirofish-sim/src/: actions.rs  agent.rs  config.rs  engine.rs  interview.rs  lib.rs  memory_updater.rs  platform.rs  profile.rs
crates/mirofish-task/: Cargo.toml
crates/mirofish-task/src/: lib.rs  manager.rs  sse.rs
crates/mirofish-text/: Cargo.toml
crates/mirofish-text/src/: chunking.rs  encoding.rs  lib.rs  pdf.rs
crates/mirofish-web/: Cargo.toml  Trunk.toml  index.html
crates/mirofish-web/src/: api.rs  app.rs  i18n.rs  lib.rs
crates/mirofish-web/src/components/: graph_panel.rs  graph_viz.rs  history_database.rs  home.rs  interview.rs  mod.rs  report.rs  simulation.rs
crates/mirofish-web/styles/: main.css
static/: index.html  mirofish-web-a998088f1ec29168.js  mirofish-web-a998088f1ec29168_bg.wasm
