[workspace]
members = [
    "crates/mirofish-core",
    "crates/mirofish-api",
    "crates/mirofish-llm",
    "crates/mirofish-sim",
    "crates/mirofish-report",
    "crates/mirofish-graph",
    "crates/mirofish-task",
    "crates/mirofish-text",
    "crates/mirofish-web",
    "crates/mirofish-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["MiroFish Team"]
license = "AGPL-3.0"
repository = "https://github.com/666ghj/MiroFish"
description = "MiroFish - A Simple and Universal Swarm Intelligence Engine, Predicting Anything"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HTTP
axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# LLM
async-openai = "0.27"

# Database
spacetimedb = "1.0"
spacetimedb-client = "1.0"

# Templating
askama = "0.13"

# Config
config = "0.15"
dotenvy = "0.15"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# i18n
fluent = "0.16"
fluent-bundle = "0.15"

# SSE
async-stream = "0.3"

# File processing
pdf-extract = "0.7"
chardetng = "0.1"

# Build
cargo-all-features = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true