[package]
name = "mirofish-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mirofish-core = { path = "../mirofish-core" }
mirofish-llm = { path = "../mirofish-llm" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
static_assertions = "1.1"
