[package]
name = "mirofish-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mirofish-core = { path = "../mirofish-core" }
mirofish-llm = { path = "../mirofish-llm" }
mirofish-graph = { path = "../mirofish-graph" }
mirofish-task = { path = "../mirofish-task" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = "0.3"
rand = "0.8"
petgraph = "0.6"
once_cell = "1.20"