[package]
name = "mirofish-task"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mirofish-core = { path = "../mirofish-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
futures = "0.3"
axum = { workspace = true }
